# my_velog_agent

./: .gitignore  Dockerfile.back  Dockerfile.lang  ReadMe.md  docker-compose.yml  pyproject.toml  requirements.txt
ai_service/: Dockerfile  langchain_chain.py  langchain_tool_test.py  main.py  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
