[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-velog-agent"
version = "0.1.0"
description = "AI agent for summarizing and posting to Velog"
requires-python = ">=3.12"
authors = [
    {name = "Tasha", email = "your-email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "langchain[openai]",
    "openai",
    "faiss-cpu",
    "grpcio",
    "grpcio-tools",
    "python-dotenv",
    "pydantic",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 